<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_navsim_plugin</name>
  <version>0.0.0</version>
  <description>This package is a file selection launcher for navsim</description>
  <maintainer email="plaba417@students.bju.edu">Peter Labadorf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt_gui_cpp</build_depend>
  
  <build_depend>simulation_loader_msgs</build_depend>

  <exec_depend>rqt</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="plugin.xml"/>
  </export>
</package>
